2004-04-24  Sebastian Rahtz  <rahtz@spqr-dell.oucs.ox.ac.uk>

	* teinames.xml: created ny merging Alejandro Bia's translations
	with a list of elements, attributes and values derived from the P5
	ODD sources
