@@ -1,6 +1,17 @@
+2004-04-25  Sebastian Rahtz  <rahtz@spqr-dell.oucs.ox.ac.uk>
+
+	* add translate-instance.xsl: converts elements and attributes in 
+	a TEI P5 XML document to the chosen language.
+
+	* add translate-odd.xsl: extends a TEI extension written in ODD to
+	use element and attribute names from the chosen language
+
+	* teinames.xml: removed quite a few cases where the translated
+	name was no different to the english one
+
 2004-04-24  Sebastian Rahtz  <rahtz@spqr-dell.oucs.ox.ac.uk>
 
-	* teinames.xml: created ny merging Alejandro Bia's translations
+	* teinames.xml: created by merging Alejandro Bia's translations
 	with a list of elements, attributes and values derived from the P5
 	ODD sources
 
